# codex-shim

./: .gitignore  CHANGELOG.md  README.md  models.example.json  pyproject.toml
.github/workflows/: ci.yml
codex_shim/: catalog.py  cli.py  cline_passthrough.py  cursor_passthrough.py  router.py  server.py  settings.py  translate.py
docs/: subscription-integration.md
scripts/: codex-shim-install-cursor-composer
tests/: conftest.py  test_cli_doctor.py  test_cursor_passthrough.py  test_hostguard.py  test_native_tool_types.py  test_opencode_go.py  test_router.py  test_router_integration.py  test_server.py  test_settings_catalog.py  test_translate.py
windows/: README.md  codex-profile-switcher.ps1  codex-profile-switcher.py  install.ps1
