[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-shim"
version = "0.1.0"
description = "Local all-model BYOK shim for Codex Desktop and CLI."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "0xSero" }]
keywords = ["codex", "byok", "openai", "anthropic", "responses-api", "model-routing"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5",
  "ruff>=0.6",
  "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/0xSero/codex-shim"
Repository = "https://github.com/0xSero/codex-shim"
Issues = "https://github.com/0xSero/codex-shim/issues"

[project.scripts]
codex-shim = "codex_shim.cli:_entrypoint"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
# The existing codebase uses long lines; pick a generous limit so the lint gate
# enforces real correctness rules (unused imports, undefined names, …) without
# requiring a sweeping reformat. Tighten later as the code is reflowed.
line-length = 160
target-version = "py311"

[tool.ruff.lint]
# E/F = pyflakes + pycodestyle errors, W = warnings. These catch real
# correctness problems (unused/undefined names, unreachable code) without the
# stylistic churn of import-sorting/reformatting the existing tree.
# E501 (line too long) is excluded for now to match the line-length stance above.
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Tests intentionally import fixtures/symbols for side effects and readability.
"tests/*" = ["E402"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
# The codebase is not yet fully typed; keep mypy informative (run in CI as a
# non-blocking report) rather than strict so it surfaces issues without
# blocking unrelated changes.
warn_unused_ignores = false
warn_redundant_casts = true

[tool.coverage.run]
source = ["codex_shim"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
